// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/SideNav Compact 1`] = `
<div
  dir="ltr"
>
  <nav
    className="fd-side-nav"
  >
    <div
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list--compact fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Component API/SideNav Condensed 1`] = `
<div
  dir="ltr"
>
  <nav
    className="fd-side-nav fd-side-nav--condensed"
  >
    <div
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--home"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--cart"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--accept"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--alert"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--bell"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Component API/SideNav One Level 1`] = `
<div
  dir="ltr"
>
  <nav
    className="fd-side-nav"
  >
    <div
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      className="fd-side-nav__utility"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Component API/SideNav Primary 1`] = `
<div
  dir="ltr"
>
  <nav
    className="fd-side-nav"
  >
    <div
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Component API/SideNav With Icons 1`] = `
<div
  dir="ltr"
>
  <nav
    className="fd-side-nav"
  >
    <div
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
        data-sample="Sample"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="/"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--home"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="/"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--home"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="/"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--home"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--home"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__icon sap-icon--home"
              role="presentation"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Component API/SideNav With Sub List 1`] = `
<div
  dir="ltr"
>
  <nav
    className="fd-side-nav"
  >
    <div
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item 1
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link has-child"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item 2
            </span>
          </a>
          <ul
            aria-expanded={false}
            aria-hidden={true}
            className="fd-nested-list--text-only fd-nested-list level-1"
          >
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 2
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 3
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 4
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 5
                </span>
              </a>
            </li>
          </ul>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item 3
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link has-child"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item 4
            </span>
          </a>
          <ul
            aria-expanded={false}
            aria-hidden={true}
            className="fd-nested-list--text-only fd-nested-list level-1"
          >
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 2
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 3
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 4
                </span>
              </a>
            </li>
          </ul>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Component API/SideNav With Title 1`] = `
<div
  dir="ltr"
>
  <nav
    className="fd-side-nav"
  >
    <div
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__group-header"
        >
          Group Title
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__group-header"
        >
          Group Title
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
